# snapcam-to-obs-

./: BUILD_INSTRUCTIONS.md  DEMO.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  WINDOWS_INSTALL.md  build.sh  check_cpp_syntax.sh  install.sh  setup-python.sh  test-installation.sh  test_face_tracking.py  test_lens_conversion.py
docs/plans/: 2026-02-03-obs30-plugin-fix.md
examples/sample_lens/: lens_info.json
lens-converter/: snap_lens_converter.py
obs-python-script/: README.md  requirements.txt  snap_filter.py
obs-snapfilter-plugin/: CMakeLists.txt  PROJECT_STRUCTURE.txt  STATUS.md  buildspec.json
obs-snapfilter-plugin/data/locale/: en-US.ini
obs-snapfilter-plugin/data/presets/: default.json
obs-snapfilter-plugin/data/shaders/: beauty-filter.shader  cartoon.shader  default.shader
obs-snapfilter-plugin/include/: obs-snapfilter.h  version.h
obs-snapfilter-plugin/src/: face-tracker.cpp  face-tracker.h  lens-loader.cpp  lens-loader.h  main.cpp  shader-utils.cpp  shader-utils.h  snap-filter.cpp  snap-filter.h
